<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_color">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="409dp"
        android:layout_height="462dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/coin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_outline"
        android:fontFamily="@font/aldotheapache"
        android:text="@string/_Start"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/scoreButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_outline"
        android:fontFamily="@font/aldotheapache"
        android:text="@string/_Highscore"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/creditsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/creditsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/button_outline"
        android:fontFamily="@font/aldotheapache"
        android:text="@string/_Credits"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/continueText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/aldotheapache"
        android:gravity="center"
        android:text="@string/_Continue"
        android:textColor="@color/text_color"
        android:textSize="48sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/scoreButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_outline"
        android:fontFamily="@font/aldotheapache"
        android:text="@string/_YES"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueText" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/button_outline"
        android:fontFamily="@font/aldotheapache"
        android:text="@string/_NO"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueText" />

</androidx.constraintlayout.widget.ConstraintLayout>
