<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/highscoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginEnd="96dp"
            android:fontFamily="@font/aldotheapache"
            android:gravity="center"
            android:text="@string/_Highscore"
            android:textColor="@color/text_color"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/score1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="112dp"
            android:fontFamily="@font/aldotheapache"
            android:gravity="center"
            android:text="@string/_Nil"
            android:textColor="@color/text_color"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/score2Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginEnd="112dp"
            android:fontFamily="@font/aldotheapache"
            android:gravity="center"
            android:text="@string/_Nil"
            android:textColor="@color/text_color"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/score3Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginEnd="112dp"
            android:fontFamily="@font/aldotheapache"
            android:gravity="center"
            android:text="@string/_Nil"
            android:textColor="@color/text_color"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/score4Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginEnd="112dp"
            android:fontFamily="@font/aldotheapache"
            android:gravity="center"
            android:text="@string/_Nil"
            android:textColor="@color/text_color"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/score5Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginEnd="112dp"
            android:fontFamily="@font/aldotheapache"
            android:gravity="center"
            android:text="@string/_Nil"
            android:textColor="@color/text_color"
            android:textSize="28sp" />

        <Button
            android:id="@+id/playagainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_outline"
            android:fontFamily="@font/aldotheapache"
            android:text="@string/_Play"
            android:textColor="@color/text_color"
            android:textSize="32sp" />

        <Button
            android:id="@+id/mainmenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/button_outline"
            android:fontFamily="@font/aldotheapache"
            android:text="@string/_MainMenu"
            android:textColor="@color/text_color"
            android:textSize="32sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>